fix rest of problems in dark mode

--- a/plugins/woocommerce-blocks/assets/js/blocks/checkout/inner-blocks/checkout-shipping-method-block/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/checkout/inner-blocks/checkout-shipping-method-block/style.scss
@@ -35,6 +35,10 @@
 	cursor: pointer;
 	position: relative; // Add this for pseudo-element positioning
 
+	.has-dark-controls & {
+		outline: 1px solid $input-border-dark;
+	}
+
 	&::after {
 		content: "";
 		position: absolute;
