--- a/plugins/woocommerce-blocks/assets/js/blocks/checkout/styles/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/checkout/styles/style.scss
@@ -36,6 +36,12 @@
 			border-top: 0;
 		}
 	}
+
+	&.has-dark-controls {
+		.wp-block-woocommerce-checkout-order-summary-block {
+			border-color: $input-border-dark;
+		}
+	}
 }
 
 .wp-block-woocommerce-checkout.is-loading {
@@ -54,7 +60,9 @@
 	}
 	.wp-block-woocommerce-checkout-fields-block {
 		width: 65%;
-		padding-right: math.percentage(math.div($gap-largest, 1060px)); // ~1060px is the default width of the content area in Storefront.
+		padding-right: math.percentage(
+			math.div($gap-largest, 1060px)
+		); // ~1060px is the default width of the content area in Storefront.
 	}
 	.wp-block-woocommerce-checkout-totals-block,
 	.wp-block-woocommerce-checkout-fields-block {
@@ -134,7 +142,8 @@
 // For Twenty Twenty we need to increase specificity a bit more.
 .theme-twentytwenty .wp-block-woocommerce-checkout.is-loading {
 	.wp-block-woocommerce-checkout-totals-block
-	.wc-block-components-panel > h2 {
+		.wc-block-components-panel
+		> h2 {
 		@include font-size(large);
 		@include reset-box();
 	}
