--- a/plugins/woocommerce-blocks/packages/components/radio-control/style.scss
+++ b/plugins/woocommerce-blocks/packages/components/radio-control/style.scss
@@ -19,6 +19,12 @@
 			position: absolute;
 		}
 
+		.has-dark-controls & {
+			&::after {
+				background: $input-border-dark;
+			}
+		}
+
 		// The first child doesn't need a fake border-top because it's handled by its parent's border-top. This stops
 		// a double border.
 		&:first-child::after {
@@ -57,6 +63,12 @@
 		box-sizing: border-box;
 	}
 
+	.has-dark-controls & {
+		&::after {
+			border-color: $input-border-dark;
+		}
+	}
+
 	// Remove the top border when the first element is selected, this is so we don't get a double border with the
 	// box-shadow.
 	&.wc-block-components-radio-control--highlight-checked--first-selected::after {
@@ -90,6 +102,12 @@
 			left: 1px;
 			top: 0;
 			position: absolute;
+		}
+
+		.has-dark-controls & {
+			&::after {
+				background: $input-border-dark;
+			}
 		}
 
 		// The first child doesn't need a fake border-top because it's handled by its parent's border-top.
@@ -203,8 +221,17 @@
 			border-color: $controls-border-dark;
 			background-color: $input-background-dark;
 
+			&:checked {
+				border-color: $input-text-dark;
+			}
+
 			&:checked::before {
 				background: $input-text-dark;
+			}
+
+			&:focus {
+				outline: 1px solid $input-text-dark;
+				outline-offset: 1px;
 			}
 		}
 
